# trutheval

./: .gitignore  README.md  tox.ini
datasets/evaluation/: dataset.json  factual_correctness_eval.jsonl  gold-dataset.json  report.json
datasets/human-assessment/: assessment-dataset.json  report.json  results-evaluator-1.json  results-evaluator-2.json
truthbench/: README.md  pyproject.toml
truthbench/src/truthbench/: __init__.py  cli.py  pipeline.py  tmp.py  truth_pipeline.py
truthbench/src/truthbench/readers/: json_reader.py
truthbench/src/truthbench/steps/: blacklist.py  counter.py  factual.py  filter.py  noise.py  paraphrase.py  rank.py
truthbench/tests/: test_models.py  test_pipeline.py
truthbench/tests/readers/: test_json_reader.py
truthbench/tests/steps/: test_blacklist.py  test_counter.py  test_factual.py  test_filter.py  test_noise.py  test_paraphrase.py  test_rank.py
truthscore/: README.md  pyproject.toml
truthscore/tests/: test_factual_correctness.py
ui/: evaluation_interface.py  requirements.txt
