[tool.poetry]
name = "truthbench"
version = "0.1.0"
description = ""
authors = ["Giovanni Gatti Pinheiro <giovanni.gatti.pinheiro@gmail.com>"]
readme = "README.md"
packages = [{include = "truthbench", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
spacy = ">=3.8.7,<4.0.0"
openai = {version = ">=1.82.0,<2.0.0", optional = true}

[tool.poetry.extras]
openai = ["openai"]

[tool.poetry.scripts]
truthbench = "truthbench.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
