[project]
name = "truthscore"
version = "0.1.0"
description = ""
authors = [
    {name = "Giovanni Gatti Pinheiro", email = "giovanni.gatti.pinheiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "truthscore", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
